# DocSorterV2

./: .env.example  .gitignore  CHAT-BASED-EVAL.md  CLAUDE.md  DEMO.md  README.md  ROADMAP.md  SCOPING-FRAGEBOGEN.md  UX-ROADMAP.md  build_mac.sh  build_win.ps1  config.default.yaml  dashboard.py  docsorter.spec  install.sh  main.py  pre_build_check.py  pyproject.toml  requirements.txt  upload_to_netlify.sh
.claude/: launch.json  settings.json
.claude/scripts/: syntax_check_all.py  syntax_check_file.py
.claude/skills/doc-pipeline/: SKILL.md
.github/workflows/: pages.yml  release.yml  tests.yml
assets/: icon.icns
landing/: index.html  version.json
landing/downloads/: DocSorter-2.0.0-mac-arm64.dmg  DocSorter-2.0.1-mac-arm64.dmg  README.md
legacy/: README.md  docsorter_v0_single_user.py  docsorter_v0_variant.py
scripts/: com.docsorter.tray.plist  install-tray-autostart.sh  run-tray.sh
src/: alerts.py  app_paths.py  assistant_store.py  brain.py  calendar_connector.py  calendar_store.py  classifier.py  config.py  context_extractor.py  email_connector.py  email_webhook.py  feed_store.py  invoice_extractor.py  learning_engine.py  llm_classifier.py  log_setup.py  logger.py  messenger_webhook.py  organizer.py  prerequisites.py  reader.py  scheduler.py  single_instance.py  startup_check.py  supabase_client.py  tray_app.py  updater.py  user_profile.py  version.py  watcher.py
src/dashboard/: __init__.py  agent.py  chart_data.py  layout.py  theme.py
tests/: conftest.py  test_alerts.py  test_classifier.py  test_config.py  test_organizer.py  test_tray_app.py
(+39 files in other folders)
