[project]
name = "doc-sorter"
version = "0.7.0"
description = "Lokales Dokumenten-Sortierungs- und Klassifikations-Tool mit Dashboard"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.0",
    "pytesseract>=0.3",
    "pdf2image>=1.16",
    "Pillow>=10.0",
    "langdetect>=1.0",
    "python-slugify>=8.0",
    "PyYAML>=6.0",
    "nicegui>=2.0",
    "watchdog>=4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm    = ["openai>=1.0", "anthropic>=0.30"]
ml     = ["sentence-transformers>=2.0", "scikit-learn>=1.3"]
native = ["pywebview>=4.0"]
build  = ["pyinstaller>=6.0"]
dev    = ["pyinstaller>=6.0", "pywebview>=4.0"]

[project.scripts]
docsorter           = "main:main"
docsorter-dashboard = "dashboard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
